@@ -10,8 +10,10 @@
  *
  *  The following list indicates what microcontrollers are compatible with this demo.
  *
- *  - AT90USB646
  *  - AT90USB162
+ *  - ATMEGA32U4
+ *  - AT90USB646
+ *  - AT90USB1286
  *
  *  \section SSec_Info USB Information:
  *
@@ -47,7 +49,9 @@
  * This bootloader enumerates to the host as a HID Class device, allowing for Teensy compatible programming
  * software to load firmware onto the AVR, such as the official software at <a>http://www.pjrc.com/teensy/</a>.
  *  
- * Out of the box this bootloader builds for the AT90USB162, and will fit into 4KB of bootloader space.
+ * Out of the box this bootloader builds for the ATMEGA32U4, and will fit into 4KB of bootloader space. For other
+ * devices, the makefile will need to be updated to reflect the altered MCU model and bootloader start address. When
+ * calculating the bootloader start address, use (TARGET_FLASH_SIZE_BYTES - 4096).
  *
  * This spoofs (with permission) the official Teensy bootloader's VID and PID, so that the software remains
  * compatible with no changes.
